--- a/footer.html
+++ b/footer.html
@@ -45,7 +45,7 @@
                     <p> united states </p>
                 </div>
             </div>
-            <div id="credit"><a href="https://linkedin.com/in/priyanka-sharma-b79401142"> © Priyanka Sharma </a> &nbsp&nbsp&nbsp | &nbsp&nbsp&nbsp <a href="https://www.edyoda.com/" target="_blank"> EDYODA </a></div>
+            <div id="credit"><a href="https://www.linkedin.com/in/rajveer-singh-932264247/"> © Rajveer Singh </a> &nbsp&nbsp&nbsp | &nbsp&nbsp&nbsp <a href="https://www.instagram.com/sick.ranches/" target="_blank"> INSTAGRAM </a></div>
         </section>
 
     </footer>
