--- a/cart.html
+++ b/cart.html
@@ -2,65 +2,66 @@
 <html lang="en">
 <head>
     <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-PNCWSJXB');</script>
-<!-- End Google Tag Manager -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title> Cart | E-COMMERCE WEBSITE BY EDYODA </title>
-    <link rel="stylesheet" href="css/cart.css">
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-PNCWSJXB');</script>
+    <!-- End Google Tag Manager -->
+
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Cart | E-COMMERCE WEBSITE BY EDYODA</title>
+
+    <link rel="stylesheet" href="css/cart.css" />
     <!-- favicon -->
-    <link rel="icon" href="https://yt3.ggpht.com/a/AGF-l78km1YyNXmF0r3-0CycCA0HLA_i6zYn_8NZEg=s900-c-k-c0xffffffff-no-rj-mo" type="image/gif" sizes="16x16">
+    <link rel="icon" href="https://yt3.ggpht.com/a/AGF-l78km1YyNXmF0r3-0CycCA0HLA_i6zYn_8NZEg=s900-c-k-c0xffffffff-no-rj-mo" type="image/gif" sizes="16x16" />
     <!-- header links -->
     <script src="https://kit.fontawesome.com/4a3b1f73a2.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet" />
 </head>
 <body>
-        <!-- HEADER -->
-    <div id="1"></div>
-    <script>
-        load("header.html");
-        function load(url)
-        {
-            req = new XMLHttpRequest();
-            req.open("GET", url, false);
-            req.send(null);
-            document.getElementById(1).innerHTML = req.responseText;
-        }
-    </script>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PNCWSJXB"
+            height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
-        <!-- CART CONTAINER -->
+    <!-- HEADER -->
+    <div id="header"></div>
+
+    <!-- CART CONTAINER -->
     <div id="cartMainContainer">
-        <h1> Checkout </h1>
-        <h3 id="totalItem"> Total Items: 0 </h3>
-
+        <h1>Checkout</h1>
+        <h3 id="totalItem">Total Items: 0</h3>
         <div id="cartContainer">
             <!-- JS rendered code -->
         </div>
-
     </div>
 
-</body>
-    <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PNCWSJXB"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
     <!-- FOOTER -->
-    <div id="4"></div>
+    <div id="footer"></div>
+
     <script>
-        load("footer.html");
-        function load(url)
-        {
-            req = new XMLHttpRequest();
-            req.open("GET", url, false);
+        document.addEventListener('DOMContentLoaded', function () {
+            load("header.html", "header");
+            load("footer.html", "footer");
+        });
+
+        function load(url, id) {
+            let req = new XMLHttpRequest();
+            req.open("GET", url, false); // synchronous request as before
             req.send(null);
-            document.getElementById(4).innerHTML = req.responseText;
+            if (req.status === 200) {
+                document.getElementById(id).innerHTML = req.responseText;
+            } else {
+                console.error("Failed to load " + url);
+            }
         }
     </script>
-<script src="/cart.js"></script>
+
+    <script src="/cart.js"></script>
+</body>
 </html>
