--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <meta http-equiv="Content-Security-Policy"
     content="
       default-src 'self';
-      script-src 'self' 'unsafe-inline' https://*.knoxtrails.com https://knoxtrails.com https://kit.fontawesome.com https://cdnjs.cloudflare.com https://ka-f.fontawesome.com;
-      connect-src 'self' https://*.knoxtrails.com https://knoxtrails.com https://ka-f.fontawesome.com;
-      img-src 'self' data: https://*.knoxtrails.com https://knoxtrails.com https://www.googletagmanager.com https://yt3.ggpht.com https://www.google-analytics.com;
+      script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.knoxtrails.com https://knoxtrails.com https://kit.fontawesome.com https://ka-f.fontawesome.com https://cdnjs.cloudflare.com https://www.googletagmanager.com https://www.google-analytics.com;
+      connect-src 'self' https://*.knoxtrails.com https://knoxtrails.com https://ka-f.fontawesome.com https://cdnjs.cloudflare.com https://*.mockapi.io https://mockapi.io https://www.google-analytics.com https://analytics.google.com;
+      img-src 'self' data: blob: https://*.knoxtrails.com https://knoxtrails.com https://www.googletagmanager.com https://yt3.ggpht.com https://www.google-analytics.com https://cdnjs.cloudflare.com https://*.mockapi.io;
       frame-src https://*.knoxtrails.com https://knoxtrails.com https://www.googletagmanager.com;
       style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://ka-f.fontawesome.com;
-      font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com https://ka-f.fontawesome.com;
+      font-src 'self' data: https://fonts.gstatic.com https://cdnjs.cloudflare.com https://ka-f.fontawesome.com;
     ">
 
   <!-- ================== FAVICON ================== -->
