--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           j = d.createElement(s),
           dl = l !== 'dataLayer' ? '&l=' + l : '';
       j.async = true;
-      j.src = 'https://gtm.knoxtrails.com/gtm.js?id=' + i + dl;
+      j.src = 'https://knoxtrails.com/metrics/gtm.js?id=' + i + dl;
       f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-5XX94PVX');
   </script>
